<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/maps"
        android:visibility="visible" />

    <SwitchPreference
        android:background="@color/colorWhite"
        android:icon="@drawable/ic_zoom_out_map_black_24dp"
        android:key="enabled"
        android:title="@string/butMash"
        android:defaultValue="true"/>

    <ListPreference
        android:defaultValue="Схема"
        android:entries="@array/organizationTypes1"
        android:entryValues="@array/organizationTypes1"
        android:key="@string/list"
        android:icon="@drawable/ic_public_black_24dp"
        android:title="@string/vid"
        android:dialogTitle="@string/vib"/>

    <Preference
        android:key="enabled1"
        android:background="@color/colorWhite"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/aboutfr"/>

</PreferenceScreen>